--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    background: url(london.jpeg);
+    background: url(Love-London-Web-Design.jpeg);
     background-size: cover;
 }
 
@@ -10,5 +10,9 @@ body, html {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 600px;
+    width: 500px;
+    box-sizing: border-box;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
 }
