--- a/style.css
+++ b/style.css
@@ -1,18 +1,77 @@
 body, html {
     margin: 0;
     padding: 0;
-    background: url(Love-London-Web-Design.jpeg);
-    background-size: cover;
+    height: 100vh;
+    
+    background: 
+      linear-gradient(
+        rgba(0, 0, 0, 0.65), 
+        rgba(0, 0, 0, 0.65)
+      ),
+      url(person-london-webdesign-bitcoin.jpeg);
+      background-position-x: -350px;
+      background-size: cover;
 }
-
+  
 .wrapper {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-10%, -80%);
     width: 500px;
     box-sizing: border-box;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+}
+
+.circle {
+    margin: 40px 10px 30px 10px;
+    width: 200px;
+    height: 200px;
+    background: url(person.jpeg);
+    float: left;
+    background-position-x: -55px;
+    background-position-y: -25px;
+    border-radius: 50%;
+    shape-outside: circle();
+}
+
+p {
+    margin: 5px;
+    padding: 5px;
+    text-align: justify;
+    line-height: 22px;
+}
+
+h1 {
+    margin: 10 10 20px;
+    padding: 50;
+    font-size: 28px;
+    text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    .wrapper {
+        position: absolute;
+        top: 50%;
+        left: 10%;
+        transform: translate(-10%, -80%);
+        width: 400px;
+        box-sizing: border-box;
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+    }
+    .circle {
+        margin: 40px 10px 30px 10px;
+        width: 150px;
+        height: 150px;
+        background: url(person_sm.jpeg);
+        float: left;
+        background-position-x: -55px;
+        background-position-y: -25px;
+        border-radius: 50%;
+        shape-outside: circle();        
+    }
 }
